# s3app

./: .env  .gitignore  .helmignore  Dockerfile  MANIFEST.in  README.md  READMEDockerHub.md  buildDocker.sh  buildPyPi.sh  pyproject.toml  setup.cfg  setup.py
helm/: .helmignore  Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  configMapDotEnv.yaml  configMapEnvVar.yaml  configMapNginx.yaml  deployment.yaml  ingress.yaml  service.yaml
s3app/: __init__.py  config.py  s3_base.py  s3_content_class.py  s3_content_rest.py  s3_content_view.py  s3_error.py  s3_general_class.py  s3_general_error.py  s3_general_requests.py  s3_general_rest.py  s3_manage_class.py  s3_manage_rest.py  s3_manage_view.py  s3_sec.py  s3_sec_models.py  s3_sec_signals.py  s3_sec_views.py  s3_server.py
s3app/sqls/: 1_2_0.sql  sql.py
s3app/static/css/: main.css
s3app/static/js/: events.js  eventsContent.js  eventsManage.js  explorer.js  manage.js
s3app/templates/: s3Content.html  s3ManageGet.html  s3ManageList.html
s3app/templates/appbuilder/: baselayout.html  init.html  navbar.html  navbar_right.html
s3app/templates/appbuilder/general/widgets/roles/: show.html
s3app/templates/s3app/: datasecurity.html  lib.html  overview.html  permissions.html
s3app/templates/s3app/templates/: panel.html
