# pip install -e .
[bdist_wheel]
universal = 1

[metadata]

[options]
packages = find:
install_requires =
    Flask >= 2.2.0
    Flask-Login >= 0.1.1
    Flask-AppBuilder >= 4.1.4
    Flask-Session >= 0.4.0
    boto3 >= 1.24.0
    flask-restful >= 0.2.12
    blinker >= 1.5.0
    psycopg2-binary >= 2.9.3
    waitress >= 2.1.2
    python-dotenv >= 0.21.0
    python-ldap >= 3.4.3
